--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -28,8 +28,11 @@ jobs:
             corestore-${{ matrix.platform }}-${{ matrix.arch }}-
       - uses: actions/setup-node@v4
         with:
-          node-version: lts/*
-      - run: |
+          node-version: 20
+          registry-url: 'https://npm.pkg.github.com'
+
+      - name: Install Dependencies
+        run: |  
           sudo apt-get update
           sudo apt-get install -y curl ca-certificates build-essential git libgtk-4-dev pkg-config fuse file
           # sudo apt-get install -y clang pkg-config libgtk-4-dev clang-tools fuse file
@@ -69,7 +72,7 @@ jobs:
         with:
           name: Oniri-Desktop-Linux-${{ matrix.arch }}-${{ matrix.tags }}.AppImage
           path: "${{ steps.find_file.outputs.APPIMAGE_PATH }}"
-          
+
   merge:
     runs-on: ubuntu-latest
     needs: prebuild
